[gd_scene load_steps=32 format=2]

[ext_resource path="res://2DStratOnCombat/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://2DStratOnCombat/Assassin_Male/dash_sword_2.png" type="Texture" id=2]
[ext_resource path="res://2DStratOnCombat/Assassin_Male/attackWeapon1_3.png" type="Texture" id=3]
[ext_resource path="res://2DStratOnCombat/Assassin_Male/idle_3.png" type="Texture" id=4]
[ext_resource path="res://2DStratOnCombat/Assassin_Male/attackWeapon2_3.png" type="Texture" id=5]
[ext_resource path="res://2DStratOnCombat/Assassin_Male/idle_1.png" type="Texture" id=6]
[ext_resource path="res://2DStratOnCombat/Assassin_Male/attackWeapon3_2.png" type="Texture" id=7]
[ext_resource path="res://2DStratOnCombat/Assassin_Male/attackWeapon3_1.png" type="Texture" id=8]
[ext_resource path="res://2DStratOnCombat/Assassin_Male/run_3.png" type="Texture" id=9]
[ext_resource path="res://2DStratOnCombat/Assassin_Male/attackWeapon2_1.png" type="Texture" id=10]
[ext_resource path="res://2DStratOnCombat/Assassin_Male/dash_sword_1.png" type="Texture" id=11]
[ext_resource path="res://2DStratOnCombat/Assassin_Male/run_2.png" type="Texture" id=12]
[ext_resource path="res://2DStratOnCombat/Assassin_Male/attackWeapon1_1.png" type="Texture" id=13]
[ext_resource path="res://2DStratOnCombat/Assassin_Male/attackWeapon2_2.png" type="Texture" id=14]
[ext_resource path="res://2DStratOnCombat/Assassin_Male/run_1.png" type="Texture" id=15]
[ext_resource path="res://2DStratOnCombat/Assassin_Male/idle_2.png" type="Texture" id=16]
[ext_resource path="res://2DStratOnCombat/Assassin_Male/attackWeapon1_2.png" type="Texture" id=17]
[ext_resource path="res://2DStratOnCombat/Assassin_Male/run_4.png" type="Texture" id=18]
[ext_resource path="res://2DStratOnCombat/Assassin_Male/attackWeapon3_3.png" type="Texture" id=19]
[ext_resource path="res://2DStratOnCombat/Assassin_Male/hit_1.png" type="Texture" id=20]
[ext_resource path="res://2DStratOnCombat/Assassin_Male/idle_sword_3.png" type="Texture" id=21]
[ext_resource path="res://2DStratOnCombat/Assassin_Male/idle_sword_2.png" type="Texture" id=22]
[ext_resource path="res://2DStratOnCombat/Shield.png" type="Texture" id=23]
[ext_resource path="res://2DStratOnCombat/Player/PlayerFSM.gd" type="Script" id=24]
[ext_resource path="res://2DStratOnCombat/Assassin_Male/dead_1.png" type="Texture" id=25]
[ext_resource path="res://2DStratOnCombat/Player/SFX_-_swoosh_10.wav" type="AudioStream" id=26]
[ext_resource path="res://2DStratOnCombat/TheRoyalRoad/light2.png" type="Texture" id=27]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.7648, 24.8392 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 2 ) ],
"loop": false,
"name": "Dash",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 16 ), ExtResource( 4 ) ],
"loop": true,
"name": "Idel",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 20 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": false,
"name": "Hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ) ],
"loop": false,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 17 ), ExtResource( 3 ) ],
"loop": false,
"name": "Counter",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 7 ), ExtResource( 19 ) ],
"loop": false,
"name": "LightAttack",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 14 ), ExtResource( 5 ) ],
"loop": false,
"name": "HeavyAttack",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 18 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 25 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 25 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Idel"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -79.1794 )
current = true
smoothing_enabled = true

[node name="HitRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitRight"]
position = Vector2( 32, 0 )
shape = SubResource( 3 )

[node name="HitLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitLeft"]
position = Vector2( -31, 0 )
shape = SubResource( 4 )

[node name="ShieldLeft" type="Sprite" parent="."]
visible = false
position = Vector2( -11.9865, 0 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 23 )

[node name="ShieldRight" type="Sprite" parent="."]
visible = false
position = Vector2( 20.9763, 0 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 23 )

[node name="PlayerFSM" type="Node" parent="."]
script = ExtResource( 24 )

[node name="RightRay" type="RayCast2D" parent="."]
cast_to = Vector2( 40, 0 )

[node name="LeftRay" type="RayCast2D" parent="."]
cast_to = Vector2( -40, 0 )

[node name="bigHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 26 )
volume_db = -15.0

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 27 )
energy = 0.7
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="HitRight" to="." method="_on_HitRight_body_entered"]
[connection signal="body_exited" from="HitRight" to="." method="_on_HitRight_body_exited"]
[connection signal="body_entered" from="HitLeft" to="." method="_on_HitLeft_body_entered"]
[connection signal="body_exited" from="HitLeft" to="." method="_on_HitLeft_body_exited"]
